--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "build": "react-scripts build"  
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
